fix: aligned back-button

--- a/views/scss/inc/_header-footer.scss
+++ b/views/scss/inc/_header-footer.scss
@@ -60,7 +60,8 @@ $footerHeight: 34;
     color: $darkBarTxt;
 
     .portal-back {
-        padding: 18px 10px 11px;
+        width: 95px;
+        padding: 26px 44px 18px 37px;
         span {
             &.icon-untab {
                 font-size: 2em;
